--- a/portfolio-de-projetos-main (1)/portfolio-de-projetos-main/index.html
+++ b/portfolio-de-projetos-main (1)/portfolio-de-projetos-main/index.html
@@ -14,10 +14,10 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Guilherme_</p>
+        <p class="lead">Meu nome é Guilherme_</p>
         <h1>Eu estudo Progamação</h1>
         <p>Sou estudante de progamção, com foco em java e java script!</p>
-        <p>Minhas habilidades</p>
+        <p>Minhas habilidades são criação de automações, designs interativos, desinvolvimentos de interfaces e sistemas de seguranças</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
             <p class="badge bg-secondary">CSS</p>
@@ -31,7 +31,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="file:///C:/Users/Guilherme/Pictures/Screenshots/Captura%20de%20tela%202025-06-17%20223829.pngg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
                         <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
